--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,33 +3,32 @@
 @tailwind utilities;
 
 /* font */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap");
 
-*{
-    font-family: 'Montserrat', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
 
-.auth{
-    @apply h-screen flex flex-col bg-space bg-cover
+.auth {
+  @apply h-screen flex flex-col bg-cover;
 }
 
-.auth__backdrop{
-    @apply flex flex-col gap-4 justify-center items-center h-full bg-black/60 backdrop-blur-[5px]
+.auth__backdrop {
+  @apply flex flex-col gap-4 justify-center items-center h-full bg-black/60 backdrop-blur-[5px];
 }
 
-.auth__input{
-    @apply px-4 py-4 bg-glass-input rounded-md outline-none text-gray-400 md:min-w-[350px]
+.auth__input {
+  @apply px-4 py-4 bg-glass-input rounded-md outline-none text-gray-400 md:min-w-[350px];
 }
 
-.auth__btn{
-    @apply bg-blue-600 py-2 text-white text-lg font-semibold rounded-md mt-2
+.auth__btn {
+  @apply bg-[#2972FF] py-2 text-white text-lg font-semibold rounded-md mt-2 shadow-btn;
 }
 
-.auth__container{
-    @apply flex flex-col gap-4 bg-glass-container backdrop-blur-[50px] rounded-[25px] px-8 py-8
+.auth__container {
+  @apply flex flex-col gap-4 bg-glass-container backdrop-blur-[50px] rounded-[25px] px-8 py-8;
 }
 
-.auth__heading{
-    @apply text-white text-3xl font-semibold text-center
+.auth__heading {
+  @apply text-white text-3xl font-semibold text-center;
 }
-
